# Excess-output

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
fc_food/: api.py  hooks.py
fc_food/private/files/: Journal Entry Complete Upload File.xlsx  Journal Entry.csv  Payment Entry (4).xlsx  Purchase Invoice (3).csv  Purchase Invoice Complete Upload File.xlsx  Purchase Invoice Complete Upload File1fe0cd.xlsx  Purchase Invoice Complete Upload File73ce31.xlsx  Purchase Invoice.xlsx  stock_ledger_2025-3-4-13-12.json.gz:Zone.Identifier
fc_food/public/js/: work_order.js
