[project]
name = "fc_food"
authors = [
    { name = "Fc_food", email = "fc_food@gmail.com"}
]
description = "App to handale the Food cornar account"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = []
 
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
 
[tool.bench.dev-dependencies]
 
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
